--- a/views/client/hoantien.ejs
+++ b/views/client/hoantien.ejs
@@ -40,11 +40,11 @@
             </div>
             <div class="row">
                 <label class="w-100 pl-2 mt-3">Thông tin tài khoản <p class="userTracuu"></p></label>
-                <div class="col-lg-6 col-6">
+                <div class="col-lg-4 col-4">
                     <!-- small box -->
                     <div class="small-box bg-danger">
                         <div class="inner">
-                            <h3 id="total-pay"></h3>
+                            <h3 id="tong-tien-nap"></h3>
 
                             <p>Tổng tiền đã nạp</p>
                         </div>
@@ -53,92 +53,130 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-6">
+                <div class="col-lg-4 col-4">
+                    <!-- small box -->
+                    <div class="small-box bg-danger">
+                        <div class="inner">
+                            <h3 id="tong-tien-bonus"></h3>
+
+                            <p>Tổng tiền bonus</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-pie-graph"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-4">
+                    <!-- small box -->
+                    <div class="small-box bg-danger">
+                        <div class="inner">
+                            <h3 id="tong-tien"></h3>
+
+                            <p>Tổng tiền</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-pie-graph"></i>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- ./col -->
+                <div class="col-lg-4 col-4">
+                    <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3 id="tong-request-pending"></h3>
+
+                            <p>Tổng số Request Pending</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-4 col-4">
+                    <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3 id="tong-request-quahan"></h3>
+
+                            <p>Tổng số Request hết time</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-4 col-4">
+                    <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3 id="tong-request-otp"></h3>
+
+                            <p>Tổng số Request có OTP</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-4 col-4">
+                    <!-- small box -->
+                    <div class="small-box bg-warning">
+                        <div class="inner">
+                            <h3 id="tong-tien-request-pending"></h3>
+
+                            <p>Tổng tiền request pending</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-4">
+                    <!-- small box -->
+                    <div class="small-box bg-warning">
+                        <div class="inner">
+                            <h3 id="tong-tien-qua-han"></h3>
+
+                            <p>Tổng tiền time quá hạn đã được hoàn</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-4 col-4">
+                    <!-- small box -->
+                    <div class="small-box bg-warning">
+                        <div class="inner">
+                            <h3 id="tong-tien-otp"></h3>
+
+                            <p>Tổng tiền thanh toán OTP</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-4 col-4">
                     <!-- small box -->
                     <div class="small-box bg-info">
                         <div class="inner">
-                            <h3 class="amount-account-user"></h3>
+                            <h3 id="so-du-vi"></h3>
 
-                            <p>Số dư</p>
+                            <p>Số dư vi</p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-bag"></i>
                         </div>
                     </div>
                 </div>
-                <!-- ./col -->
-                <div class="col-lg-6 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-success">
-                        <div class="inner">
-                            <h3 id="total-request"></h3>
-
-                            <p>Tổng số Request</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-stats-bars"></i>
-                        </div>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-6 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-warning">
-                        <div class="inner">
-                            <h3 id="total-otp"></h3>
-
-                            <p>Tổng số OTP</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-person-add"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-warning">
-                        <div class="inner">
-                            <h3 id="total-otp-amount"></h3>
-
-                            <p>Tổng số OTP trả phí</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-person-add"></i>
-                        </div>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-6 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-success">
-                        <div class="inner">
-                            <h3 id="total-money-change"></h3>
-
-                            <p>Tổng số tiền chênh</p>
-                        </div>
-                        <div class="icon">
-                            <i class="ion ion-stats-bars"></i>
-                        </div>
-                    </div>
-                </div>
-                <!-- ./col -->
-            </div>
-            <div class="row">
-                <table class="table">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope="col">STT</th>
-                            <th scope="col">Phone</th>
-                            <th scope="col">OTP</th>
-                            <th scope="col">Brand</th>
-                            <th scope="col">Giá</th>
-                            <th scope="col">Ngày tạo</th>
-                            <th scope="col">Trạng thái</th>
-                        </tr>
-                    </thead>
-                    <tbody id="list-pay">
-                    </tbody>
-                </table>
             </div>
             <!-- /.card -->
 
@@ -160,51 +198,30 @@
                 }
                 $("#token-user").text(user._id);
             });
-            async function renderDetailOTP(data) {
-                var html = ``;
-                for (var i = 0; i < data.length; i++) {
-                    var stt = "";
-                    var datei = new Date(data[i].createdAt);
-                    var amount = data[i].amount || 0;
-                    switch (data[i].status) {
-                        case 0:
-                            stt = "pending"
-                            break;
-                        case 1:
-                            stt = "done"
-                            break;
-                        case 3:
-                            stt = "expired"
-                            break;
-                    }
-                    html += `<tr id="` + data[i]._id + `">
-                            <th scope="row">`+ (i + 1) + `</th>
-                            <td>`+ data[i].phoneNumber + `</td>
-                            <td class="otp">`;
-                    if (data[i].otp && data[i].otp.length > 0) {
-                        html += data[i].otp.match(/\d+/);
-                    }
-                    html += `</td>
-                            <td>`+ data[i].brand + `</td>
-                            <td>`+ amount + `</td>
-                            <td>`+ datei.getFullYear() + "-" + (datei.getMonth() + 1) + "-" + datei.getDate() + ":" + datei.getHours() + ":" + datei.getMinutes() + ":" + datei.getSeconds() + `</td>
-                            <td class="status">`+ stt + `</td>
-                        </tr>`;
-                }
-                $("#list-pay").html(html);
-            }
             async function tracuuthongtin() {
                 let username = $("#username").val();
                 let res = await api.post("admin/manager/info-user", JSON.stringify({ username: username }));
                 if (res && res.code == 200) {
+
                     $('.userTracuu').text(res.data.user.username);
-                    $('#total-pay').text(res.data.totalPay);
-                    $('.amount-account-user').text(res.data.amount);
-                    $('#total-request').text(res.data.totalRequest);
-                    $('#total-otp').text(res.data.totalOTP);
-                    $("#total-otp-amount").text(res.data.totalAmountOTP);
-                    $("#total-money-change").text(res.data.amountChange);
-                    renderDetailOTP(res.data.listOTP);
+                    $('#tong-tien-nap').text(res.data.totalPayUser.tiennap * 1000);
+                    $("#tong-tien-bonus").text(res.data.totalPayUser.tienbonus * 1000)
+                    $('#tong-tien').text(res.data.totalPayUser.tongtien * 1000);
+                    $("#so-du-vi").text(res.data.amount);
+                    $(".amount-account").text(res.data.amount);
+
+
+                    $('#tong-request-pending').text(res.data.totalRequest.totalRq);
+                    $('#tong-request-quahan').text(res.data.totalRequest.totalExp);
+                    $("#tong-request-otp").text(res.data.totalRequest.totalOtp);
+
+                    $("#tong-tien-request-pending").text(res.data.totalRequest.totalPayRq);
+                    $("#tong-tien-qua-han").text(res.data.totalRequest.totalPayExp);
+                    $("#tong-tien-otp").text(res.data.totalRequest.totalPayOtp);
+
+
+
+
                 } else {
                     alert(res.error);
                 }
